updating changes before standup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
         </nav>
-        <div class="nav-line"></div>
+        <div class="line"></div>
         <div class="where-you-park-it">
           <h2>Home Is Where You Park It</h2>
         </div>
