started about page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="links">
               <a href="">Home</a>
-              <a href="">About Us</a>
+              <a href="about.html">About Us</a>
               <a href="">Register/Sign-in</a>
             </div>
           </div>
