added some animations other changes

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               <div class="stacked-logo"><a href="#"></a><img src="img/logo-stacked-blue.png" alt="5th Wheel logo"></a></div>
             </div>
             <div class="links">
-              <a href="">Home</a>
-              <a href="about.html">About Us</a>
-              <a href="">Register/Sign-in</a>
+              <a class="nav-btn" href="">Home</a>
+              <a class="nav-btn" href="about.html">About Us</a>
+              <a class="nav-btn" href="">Register/Sign-in</a>
             </div>
           </div>
         </nav>
@@ -109,9 +109,9 @@
           <p>Consectetur veniam pariatur tempor non tempor quis est nisi quis nostrud. Esse incididunt duis irure tempor. Lorem ex amet sit Lorem et eiusmod magna sint velit ex minim exercitation. Ullamco reprehenderit aute ut fugiat duis cupidatat enim ex. Proident reprehenderit fugiat elit velit tempor quis nostrud sit nostrud excepteur irure. Aliquip duis aliqua elit ullamco. Anim excepteur irure dolor occaecat labore nostrud esse do ullamco proident.</p>
         </div>
         <div class="links">
-                <a href="">Home</a>
-                <a href="">About Us</a>
-                <a href="">Register/Sign-in</a>
+                <a class="nav-btn" href="">Home</a>
+                <a class="nav-btn" href="">About Us</a>
+                <a class="nav-btn" href="">Register/Sign-in</a>
         </div>
       </div>
 
