added bootstrap and other changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin|Oswald&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
 
   <body>
-    <div class="container home">
+    <div class="maxwidth home">
       <header>
         <nav>
           <div class="navigation">
@@ -25,9 +32,9 @@
               <div class="stacked-logo"><a href="#"></a><img src="img/logo-stacked-blue.png" alt="5th Wheel logo"></a></div>
             </div>
             <div class="links">
-              <a class="nav-btn" href="">Home</a>
-              <a class="nav-btn" href="about.html">About Us</a>
-              <a class="nav-btn" href="">Register/Sign-in</a>
+              <a class="btn btn-dark btn-lg" href="">Home</a>
+              <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+              <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
             </div>
           </div>
         </nav>
@@ -109,9 +116,9 @@
           <p>Consectetur veniam pariatur tempor non tempor quis est nisi quis nostrud. Esse incididunt duis irure tempor. Lorem ex amet sit Lorem et eiusmod magna sint velit ex minim exercitation. Ullamco reprehenderit aute ut fugiat duis cupidatat enim ex. Proident reprehenderit fugiat elit velit tempor quis nostrud sit nostrud excepteur irure. Aliquip duis aliqua elit ullamco. Anim excepteur irure dolor occaecat labore nostrud esse do ullamco proident.</p>
         </div>
         <div class="links">
-                <a class="nav-btn" href="">Home</a>
-                <a class="nav-btn" href="">About Us</a>
-                <a class="nav-btn" href="">Register/Sign-in</a>
+                <a class="btn btn-dark btn-lg" href="index.html">Home</a>
+                <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+                <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
         </div>
       </div>
 
