added links to react login

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <div class="links">
                     <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                     <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
-                    <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
+                    <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
                 </div>
             </div>
             </nav>
@@ -181,7 +181,7 @@
             <div class="links">
                     <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                     <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
-                    <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
+                    <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
             </div>
         </div>
 
