--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="links">
               <a class="btn btn-dark btn-lg" href="">Home</a>
               <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
-              <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
+              <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
             </div>
           </div>
         </nav>
@@ -79,7 +79,7 @@
             <h2>Get Started Today</h2>
             <p>Aliquip dolor labore cillum id ea ad occaecat laborum mollit laborum ipsum cupidatat laborum. Qui velit cillum ea anim veniam quis. Veniam ad id incididunt ea enim dolore.</p>
           </div>
-          <a class="btn" href="#">Register/Sign-in</a>
+          <a class="btn" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
         </div c>
       </section>
       <section class="content-pick">
@@ -118,7 +118,7 @@
         <div class="links">
                 <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                 <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
-                <a class="btn btn-dark btn-lg" href="">Register/Sign-in</a>
+                <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
         </div>
       </div>
 
