added contact page and replaced placeholder content with copy

--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
                 <div class="links">
                     <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                     <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+                    <a class="btn btn-dark btn-lg" href="contact.html">Contact Us</a>
                     <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
                 </div>
             </div>
@@ -47,6 +48,8 @@
         </header>
 
         <section class="about">
+            <h1>The Awesome Team Behind 5th Wheel</h1>
+            <div class="line"></div>
             <h2>Team Lead</h2>
             <div class="role"> <!--team lead-->
                 
@@ -56,6 +59,8 @@
                     <a class="btn btn-outline-dark" href="https://github.com/MrT3313"><i class="fab fa-github fa-3x"></i><span class="git-username">MrT3313</span></a>
                 </div>
             </div>
+
+            <div class="line"></div>
             
             <h2>Web UI</h2>
             <div class="role"> <!--web ui-->
@@ -136,6 +141,12 @@
                     <img src="img/devs/steven.PNG" alt="">
                     <a class="btn btn-outline-dark" href="https://github.com/Sleyva1991"><i class="fab fa-github fa-3x"></i><span class="git-username">Sleyva1991</span></a>
                 </div>
+
+                <div class="dev">
+                    <h3>Nathan Hedgeman</h3>
+                    <img src="img/devs/nathan.PNG" alt="">
+                    <a class="btn btn-outline-dark" href="https://github.com/natehedgeman"><i class="fab fa-github fa-3x"></i><span class="git-username">natehedgeman</span></a>
+                </div>
             </div>
 
             <div class="line"></div>
@@ -176,13 +187,28 @@
             <div class="footer-logo">
             <img class="horz-logo" src="img/logo-blue.png" alt="5th Wheel logo">
             <img class="stacked-logo"src="img/logo-stacked-blue.png" alt="5th Wheel logo">
-            <p>Consectetur veniam pariatur tempor non tempor quis est nisi quis nostrud. Esse incididunt duis irure tempor. Lorem ex amet sit Lorem et eiusmod magna sint velit ex minim exercitation. Ullamco reprehenderit aute ut fugiat duis cupidatat enim ex. Proident reprehenderit fugiat elit velit tempor quis nostrud sit nostrud excepteur irure. Aliquip duis aliqua elit ullamco. Anim excepteur irure dolor occaecat labore nostrud esse do ullamco proident.</p>
+            <p>Discover many unique and beautiful experiences on private ranches, farms, vineyards, and more.  5th Wheel builds a global marketplace for RV and land owners.  We make it easier for travelers with RV's to do and go where they want.</p>
             </div>
-            <div class="links">
+            <div class="reach-us">
+                <h2>You can reach us at:</h2>
+                <address>
+                    5th Wheel<br>
+                    123 5th Wheel Ave<br>
+                    Some City, Some State, 12345<br>
+                    USA<br>
+                    <br>
+                    <i class="fas fa-envelope-open-text"></i>
+                    <a href="mailto:5thwheel@fakemail.com">5thwheel@fakemail.com</a><br>
+                    <i class="fas fa-phone"></i>
+                    <a href="tel:+11234567890">(123) 456-7890</a>
+                </address>
+            </div>           
+        </div>
+        <div class="links">
                     <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                     <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+                    <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Contact Us</a>
                     <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
-            </div>
         </div>
 
         <p>&copy 2019 5th Wheel</p>
