--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/4f6a22014d.js"></script>
+
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
@@ -34,6 +38,7 @@
             <div class="links">
               <a class="btn btn-dark btn-lg" href="">Home</a>
               <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+              <a class="btn btn-dark btn-lg" href="contact.html">Contact Us</a>
               <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
             </div>
           </div>
@@ -45,7 +50,7 @@
         <div class="welcome-to-5th-wheel">
           <div>
             <h2>Welcome To 5th Wheel!</h2>
-            <p>Incididunt anim et officia fugiat officia sunt amet adipisicing consequat consequat. Consequat incididunt sunt dolore minim duis et irure ea pariatur adipisicing ea qui ipsum labore. Amet eu laborum duis ex pariatur ad.</p>
+            <p>Discover many unique and beautiful experiences on private ranches, farms, vineyards, and more. 5th Wheel builds a global marketplace for RV and land owners. We make it easier for travelers with RV's to do and go where they want.</p>
           </div>
         </div>
 
@@ -55,21 +60,19 @@
       <section class="content-section">
         <div class="text-content">
           <h2>RV Owners</h2>
-          <p>Duis occaecat et dolore qui. Culpa ullamco laboris qui officia pariatur veniam occaecat ullamco consectetur ut nulla enim sunt. Sint voluptate qui deserunt mollit eu esse. Adipisicing exercitation amet amet commodo et ullamco ex consectetur nulla nostrud Lorem.</p> 
-          <p>Deserunt culpa laboris deserunt ullamco elit ipsum. Pariatur sunt non et irure nostrud ut irure eiusmod occaecat aliqua quis excepteur nulla nulla. Reprehenderit adipisicing sint aliqua veniam exercitation. Deserunt incididunt duis aute nisi sunt fugiat officia excepteur sunt officia adipisicing laboris officia.</p>
+          <p>Own an RV? Tired of over populated national parks and campgrounds?  5th Wheel allows you to connect to landowners who want to share their land with people like you. Choose from tons of great private locations to book your stay in your RV.</p> 
         </div>
         <div class="img-content">
-          <img src="img/rv-dark.jpg" alt="An RV parked at night">
+          <img src="img/rv-dark.jpg" class="img-fluid" alt="An RV parked at night">
         </div>
       </section>
       <section class="content-section inverse-content">
         <div class="img-content">
-            <img src="img/land-owners.jpg" class="img-fluid rounded" alt="A man walking in a field">
+            <img src="img/land-owners.jpg" class="img-fluid" alt="A man walking in a field">
         </div>
         <div class="text-content">
           <h2>Land Owners</h2>
-          <p>Ex fugiat ullamco commodo cupidatat laboris. Dolore id consequat ea do ullamco esse consequat ex enim eiusmod. Nulla minim cillum deserunt nostrud ullamco qui dolore.</p> 
-          <p>Nisi aliquip quis reprehenderit consectetur labore esse eiusmod enim eu qui id pariatur. Do esse ea quis culpa mollit. Quis dolore veniam occaecat elit ad aliqua aliqua dolor in fugiat. Aute duis pariatur do mollit magna minim. Qui ex ea laboris sit qui cupidatat deserunt.</p>
+          <p>Do you own land and want to earn money? Become a host today.  Join our community of thousands of land owners and start earning money from hosting RV travelers.</p> 
         </div>
       
       </section>
@@ -77,7 +80,7 @@
         <div class="content-destination-inner">
           <div class="get-started">
             <h2>Get Started Today</h2>
-            <p>Aliquip dolor labore cillum id ea ad occaecat laborum mollit laborum ipsum cupidatat laborum. Qui velit cillum ea anim veniam quis. Veniam ad id incididunt ea enim dolore.</p>
+            <p>Join our community today. Land owners host our community of RV campers to earn extra money.  RV owners book unique and beautiful locations to stay and call home.</p>
           </div>
           <a class="btn" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
         </div c>
@@ -85,25 +88,24 @@
       <section class="content-pick">
 
         <div class="feature">
-          <h4>Feature 1</h4>
-          <p>Aliquip eu do cillum eu sunt adipisicing. Reprehenderit id qui sint pariatur id Lorem quis. Exercitation aliquip occaecat labore velit sint amet adipisicing nostrud id. Eu aliqua laborum nulla sint pariatur amet velit magna enim dolor consequat anim.</p>
+          <h4>Earn Money From Your Land</h4>
+          <p>If you are a land owner you can create a listing to start hosting wonderful 5th Wheel campers.</p>
         </div>
         <div class="feature">
-          <h4>Feature 2</h4>
-          <p>Est pariatur labore est ex occaecat est. Eu tempor mollit elit quis duis. Ipsum deserunt voluptate duis quis magna quis dolore. Magna non qui fugiat laborum cupidatat. Enim ut ea laborum voluptate aliqua laborum et ut velit id enim ipsum duis. Exercitation culpa elit laborum ea. Pariatur magna esse minim culpa nisi dolor.</p>
+          <h4>Find A Place To Call Home</h4>
+          <p>Search for a reserve a spot to camp in your RV/5th wheel.  Find a private and beautiful quality site to camp/stay for a good price.</p>
         </div>
         <div class="feature">
-          <h4>Feature 3</h4>
-          <p>Esse nulla do elit proident proident commodo ad sunt dolor. Duis minim Lorem ipsum tempor in ex commodo. Qui quis tempor sit aliqua amet fugiat et consectetur.</p>
+          <h4>Avoid Crowded Campgrounds</h4>
+          <p>The land you stay on is provided by private landowners who want to share their land with campers like you.</p>
         </div>
       </section>
     </div><!-- container -->
 
     <footer class="footer">
       <div class="awesome">
-        <h2>5th Wheel is awesome</h2>
-        <p>Ipsum enim exercitation quis exercitation enim adipisicing id. Cillum eiusmod culpa ad dolor irure. Sit minim nisi dolor aute amet Lorem. Voluptate ea eiusmod fugiat dolore exercitation. Tempor officia dolore nisi cupidatat reprehenderit non nostrud duis est esse elit est. In sunt nulla non in ipsum id laborum voluptate Lorem laborum.</p>
-        <h4>Download the 5th Wheel App</h3>
+        <h2>Download the 5th Wheel App</h2>
+        <p>Our 5th Wheel app is on iOS and Android.  Download the 5th Wheel app today to get started.  Discover awesome places to stay while on the go.</p>
         <div class="download">
           <div class="ios-download"><a href="#"><img src="img/download-on-the-app-store.png" alt="Download 5th Wheel on the App Store"></a></div>
           <div class="android-download"><a href="#"><img src="img/google-play-badge.png" alt="Download 5th Wheel on the Play Store"></a></div>
@@ -113,13 +115,29 @@
         <div class="footer-logo">
           <img class="horz-logo" src="img/logo-blue.png" alt="5th Wheel logo">
           <img class="stacked-logo"src="img/logo-stacked-blue.png" alt="5th Wheel logo">
-          <p>Consectetur veniam pariatur tempor non tempor quis est nisi quis nostrud. Esse incididunt duis irure tempor. Lorem ex amet sit Lorem et eiusmod magna sint velit ex minim exercitation. Ullamco reprehenderit aute ut fugiat duis cupidatat enim ex. Proident reprehenderit fugiat elit velit tempor quis nostrud sit nostrud excepteur irure. Aliquip duis aliqua elit ullamco. Anim excepteur irure dolor occaecat labore nostrud esse do ullamco proident.</p>
+          <p>Discover many unique and beautiful experiences on private ranches, farms, vineyards, and more.  5th Wheel builds a global marketplace for RV and land owners.  We make it easier for travelers with RV's to do and go where they want.</p>
         </div>
-        <div class="links">
+        <div class="reach-us">
+          <h2>You can reach us at:</h2>
+          <address>
+              5th Wheel<br>
+              123 5th Wheel Ave<br>
+              Some City, Some State, 12345<br>
+              USA<br>
+              <br>
+              <i class="fas fa-envelope-open-text"></i>
+              <a href="mailto:5thwheel@fakemail.com">5thwheel@fakemail.com</a><br>
+              <i class="fas fa-phone"></i>
+              <a href="tel:+11234567890">(123) 456-7890</a>
+          </address>
+        </div>           
+        
+      </div>
+      <div class="links">
                 <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                 <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
+                <a class="btn btn-dark btn-lg" href="contact.html">Contact Us</a>
                 <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
-        </div>
       </div>
 
       <p>&copy 2019 5th Wheel</p>
