fixed contact link

--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
         <div class="links">
                     <a class="btn btn-dark btn-lg" href="index.html">Home</a>
                     <a class="btn btn-dark btn-lg" href="about.html">About Us</a>
-                    <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Contact Us</a>
+                    <a class="btn btn-dark btn-lg" href="contact.html">Contact Us</a>
                     <a class="btn btn-dark btn-lg" href="https://5th-wheel.now.sh/">Register/Sign-in</a>
         </div>
 
