--- a/index.html
+++ b/index.html
@@ -6,31 +6,9 @@
     <link href="css/index.css" rel="stylesheet">
 </head>
 
-<body >
-    
+<body class="main">
+
 
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
