--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="app-display">
             <div class="app-text">
                 <h2>Belong Anywhere.</h2>
-                <p>Camping will never be the same. Download the Fifth Wheel App today to re-discover the experiance of living outside</p>
+                <p>Camping will never be the same. Download the Fifth Wheel App today to re-discover the experiance of living outside.</p>
                 <img src="design/iosdown (1).png" alt="">
             </div>
             <div class="app-img">
@@ -97,28 +97,29 @@
                 <h3>Download our app!</h3>
                 <img src="design/iosdown (1).png" alt="">
             </div>
-            <div class="footer-box">
-                <h3>About</h3>
-                <a href="">Our Story</a>
-                <a href="about.html">The Team</a>
-                <a href="">Careers</a>
-                <a href="">Contact</a>
-              </div>
-            <div class="footer-box">
-                    <h3>Hosts</h3>
-                    <a href="">FAQ</a>
-                    <a href="">Host</a>
-                    <a href="">Stories</a>
-                    <a href="">Support</a>
-             </div>
-            <div class="footer-box">
-                    <h3>Social</h3>
-                    <a href="">Facebook</a>
-                    <a href="">Twitter</a>
-                    <a href="">Instagram</a>
-                    <a href="">Spotify</a>
+            <div class="footer-box-div">
+                <div class="footer-box">
+                    <h3>About</h3>
+                    <a href="">Our Story</a>
+                    <a href="about.html">The Team</a>
+                    <a href="">Careers</a>
+                    <a href="">Contact</a>
+                </div>
+                <div class="footer-box">
+                        <h3>Hosts</h3>
+                        <a href="">FAQ</a>
+                        <a href="">Host</a>
+                        <a href="">Stories</a>
+                        <a href="">Support</a>
+                </div>
+                <div class="footer-box">
+                        <h3>Social</h3>
+                        <a href="">Facebook</a>
+                        <a href="">Twitter</a>
+                        <a href="">Instagram</a>
+                        <a href="">Spotify</a>
             </div>
-            
+        </div>
         </div>
 </body>
 </html>
