--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,33 @@
 </head>
 
 <body class="main">
+        <div class="navbar">
+                <div class="logo">
+                <img src="design/Copy of logo-blue.png" alt="Logo">
+                </div>
+                <nav class="navlinks">
+                    <a href="signup.html">Dashboard</a>
+                    <a href="index.html">Home</a>
+                    <a href="" id="applink">Download App</a>
+                </nav>
+            </div>
 
+            <div>
+          
+            <div class="jumbotron">
+                <div class="container">
+                    <h1 class="display-3">Hello, Team!</h1>
+                    <p>This is a page dedicated to the wonderful team that made Fifth wheel a thing. Its also a bootstrap tempalte.</p>
+                    <p><a class="btn btn-primary btn-lg" href="#form" role="button">Contact Us &raquo;</a></p>
+                </div>
+            </div>  
 
+             <p>Not satisfied? You can always talk to a representive at x(xxx)xxx-xxxx</p>
+
+             <div id='form' class="contact-form">
+
+             </div>
+            </div>    
+         
 </body>
 </html>
