--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
              <h2>Own Land? Earn Money. </h2>
         </div>
         <div>
-             <p>Join a community of over <span id="bolder">14,000</span> other hosts who earning income on thier land. If you own land, you can host nomads and natrue lovers on your property and start making money today!</p>
+             <p>Join a community of over <b>14,000</b> other hosts who earning income on thier land. If you own land, you can host nomads and natrue lovers on your property and start making money today!</p>
         </div>
         <div>
         <a href="">Become a Host</a>
