--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
               <div class="jumbotron">
                 <div class="container">
                   <h1 class="display-3">Hello, Team!</h1>
-                  <p>This is a page dedicated to the wonderful team that made Fifth wheel a thing. Its also a bootstrap tempalte.</p>
+                  <p>This is a page dedicated to the wonderful team that made Fifth wheel a thing. Its also a bootstrap template.</p>
                   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
                 </div>
               </div>
