--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="design/Copy of logo-blue.png" alt="Logo">
         </div>
         <nav class="navlinks">
-            <a href="signup.html">Dashboard</a>
+            <a href="https://5th-wheel.now.sh/">Dashboard</a>
             <a href="contact.html">Support</a>
             <a href="" id="applink">Download App</a>
         </nav>
